<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.redgrip.www.followme.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_welcome_msg"
        android:id="@+id/tvLoginWMsg" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/tvLoginWMsg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/etEmail"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/etEmailHint"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/etEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/etPassword"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/etPasswordHint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@id/etPassword"
        android:id="@+id/Devider1"
        android:orientation="horizontal">
        <View android:layout_weight="0.25" android:layout_height="wrap_content" android:layout_width="0dp" />
        <Button
            android:text="@string/btnLoginTxt"
            android:id="@+id/btnLogin"
            style="@style/Button"/>
        <View android:layout_weight="0.25" android:layout_height="wrap_content" android:layout_width="0dp" />
    </LinearLayout>

    <TextView
        android:text="@string/tvForgotPasswordTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/tvRegisterLink"
        android:layout_below="@+id/Devider1"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRegisterLink"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:id="@+id/pbLogin" />
</RelativeLayout>
