<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_first_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorWhite"
    tools:context="net.redgrip.www.followme.FirstScreenActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/followme_main"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/ivFirstScreenLogo"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@id/ivFirstScreenLogo"
        android:id="@+id/Devider1"
        android:orientation="horizontal">
        <View android:layout_weight="0.25" android:layout_height="wrap_content" android:layout_width="0dp" />
        <Button
            android:text="@string/btnLoginTxt"
            android:id="@+id/btnLogin"
            style="@style/Button"/>
        <View android:layout_weight="0.25" android:layout_height="wrap_content" android:layout_width="0dp" />
    </LinearLayout>

    <TextView
        android:text="@string/btnRegisterTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Devider1"
        android:layout_centerHorizontal="true"
        android:id="@+id/tvRegister"
        android:textSize="20sp"
        style="@style/AppTheme" />


</RelativeLayout>
